Set vertical resize flags on the root's reflow state when we're doing SizeToContent reflows.  (Bug 562955)  r=bzbarsky  a2.0=blocking2.0:betaN